tests/paczka1/fuzzy1/11329689.err
Error in line 23: 7gsOE3DD9 S849 87,3
Error in line 18: wQXZVC7MS S849 62,0
Error in line 30: wQXZVC7MS S894 72,7
